--- a/index.html
+++ b/index.html
@@ -1,66 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Customer Feedback System</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PulseBoard – Company Feedback</title>
+
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
+    <div class="container">
 
-  <div class="container">
-    <h1>Customer Feedback</h1>
-    <p class="subtitle">Your opinion matters to us!</p>
+        <header>
+            <h1>SpendWise</h1>
+            <p>Your feedback helps us grow and serve you better</p>
+        </header>
 
-    <div class="grid">
-      <!-- Feedback Form -->
-      <div class="card">
-        <h2>How would you rate us?</h2>
+        <div class="grid">
 
-        <div class="rating-container" id="ratingStars">
-          <span class="star" data-value="1">★</span>
-          <span class="star" data-value="2">★</span>
-          <span class="star" data-value="3">★</span>
-          <span class="star" data-value="4">★</span>
-          <span class="star" data-value="5">★</span>
+            <!-- Feedback Form -->
+            <div class="card feedback-card">
+                <h2>Share Your Experience</h2>
+                <p class="subtitle">Rate your overall experience with our company</p>
+
+                <div class="rating-container" id="ratingStars">
+                    <span class="star" data-value="1">★</span>
+                    <span class="star" data-value="2">★</span>
+                    <span class="star" data-value="3">★</span>
+                    <span class="star" data-value="4">★</span>
+                    <span class="star" data-value="5">★</span>
+                </div>
+
+                <textarea id="feedbackText"
+                    placeholder="Share suggestions, concerns, or what we did well (optional)">
+                </textarea>
+
+                <button id="submitBtn" class="btn primary">
+                    Submit Feedback
+                </button>
+
+                <div class="message" id="message"></div>
+            </div>
+
+            <!-- Analytics Dashboard -->
+            <div class="card dashboard-card">
+                <div class="dashboard-header">
+                    <h2>Feedback Insights</h2>
+                    <button id="resetBtn" class="btn danger small">
+                        Clear Data
+                    </button>
+                </div>
+
+                <div class="stats">
+                    <div class="stat-card">
+                        <span class="label">Total Responses</span>
+                        <div class="stat-number" id="totalReviews">0</div>
+                    </div>
+
+                    <div class="stat-card">
+                        <span class="label">Average Rating</span>
+                        <div class="stat-number" id="avgRating">0.0</div>
+                    </div>
+
+                    <div class="stat-card highlight">
+                        <span class="label">Excellent Ratings (5★)</span>
+                        <div class="stat-number" id="fiveStars">0</div>
+                    </div>
+                </div>
+
+                <div class="chart-container">
+                    <canvas id="ratingChart"></canvas>
+                </div>
+            </div>
+
         </div>
-
-        <textarea id="feedbackText" placeholder="Tell us about your experience... (optional)"></textarea>
-
-        <button id="submitBtn">Submit Feedback</button>
-        <div class="message" id="message"></div>
-      </div>
-
-      <!-- Dashboard -->
-      <div class="card">
-        <h2>Live Analytics</h2>
-
-        <div class="stats">
-          <div class="stat-card">
-            <div>Total Reviews</div>
-            <div class="stat-number" id="totalReviews">0</div>
-          </div>
-          <div class="stat-card">
-            <div>Average Rating</div>
-            <div class="stat-number" id="avgRating">0.0</div>
-          </div>
-          <div class="stat-card">
-            <div>5★ Reviews</div>
-            <div class="stat-number" id="fiveStars">0</div>
-          </div>
-        </div>
-
-        <div class="chart-container">
-          <canvas id="ratingChart"></canvas>
-        </div>
-      </div>
     </div>
-  </div>
 
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
-
 </html>
